# theater-of-combat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game_tests.lua  imgui.ini  imgui_log.txt  msg_test.json  msg_test.xml  test.xml
docs/: gra.odt  kircholm.docx  podstawy-gry.txt  tabela-testowa.docx
editor/: CMakeLists.txt
editor/source/: main.cpp
editor/source/application/: editor_app.cpp  editor_app.h
editor/source/gui/: map_creator.cpp  map_creator.h  menu_bar.cpp  menu_bar.h  system_select.cpp  system_select.h
engine/: CMakeLists.txt
engine/include/toc/: core.h  graphics.h  gui.h  map.h
engine/include/toc/core/: application.h  exception.h  log.h  lua_vm.h  randomize.h  resource_loader.h
engine/include/toc/debug/: debug_info.h
engine/include/toc/gameplay/: action.h  actions.h  component_system.h  lua_gameplay.h  scenario.h  system.h  system_state.h
engine/include/toc/graphics/: graphics_state.h  map_gfx.h  shapes.h  token.h  unit_gfx.h
engine/include/toc/gui/: components_info.h  dock_space.h  unit_info.h
engine/include/toc/map/: graph.h  hexagons.h  lua_map.h  map.h  types.h
engine/include/toc/unit/: lua_units.h  unit.h  unit_components.h  unit_manager.h
engine/source/core/: application.cpp  exception.cpp  id_gen.h  log.cpp  lua_vm.cpp  randomize.cpp  resource_loader.cpp
engine/source/debug/: debug_info.cpp
engine/source/gameplay/: action.cpp  actions.cpp  component_system.cpp  lua.cpp  scenario.cpp  system.cpp  system_state.cpp
engine/source/graphics/: graphics_state.cpp  map_gfx.cpp  map_gfx.h  shapes.cpp  token.cpp  unit_gfx.cpp
engine/source/gui/: components_info.cpp  console.cpp  dock_space.cpp  log_window.cpp  unit_info.cpp
engine/source/map/: hexagons.cpp  lua_map.cpp  map.cpp  map.h  types.cpp
engine/source/unit/: lua_units.cpp  unit.cpp  unit_components.cpp  unit_manager.cpp
examples/: ev_ex  ev_example.cpp  events.cpp  events.h  registrable.h
examples/register/: a.out  component.cpp  component.h  main.cpp
game/: CMakeLists.txt
game/source/: main.cpp
game/source/application/: game_app.cpp  game_app.h
game/source/gameplay/: action.cpp  action.h  game_state.cpp  game_state.h
game/source/graphics/: graphics_state.h  unit_gfx.cpp  unit_gfx.h
game/source/gui/: menu_bar.cpp  menu_bar.h  network_prompt.cpp  network_prompt.h  start_prompt.cpp  start_prompt.h
game/source/lua/: lua_gameplay.cpp  lua_gameplay.h  lua_map.cpp  lua_map.h  lua_units.cpp
game/source/networking/: client.cpp  client.h  connection.cpp  connection.h  net_manager.cpp  net_manager.h  server.cpp  server.h
game/source/systems/: debug_info.cpp  debug_info.h  fighter.cpp  fighter.h  mover.cpp  mover.h
game/source/unit/: unit_components.cpp  unit_manager.h
new-architecture/: CMakeLists.txt  main.cpp  messages.cpp
new-architecture/source/: component.cpp  component.h  component_back.h  messaging.cpp  messaging.h
new-architecture/source/message-bus/: message_bus.h
resources/maps/: cereal_map.xml  cereal_test_map.xml  map.xml  test-map.json  test2-map.json  test_map.xml
resources/scenarios/: test0.lua
resources/textures/: units.xcf
resources/units/: test0-umg.json  test1-umg.json  test2-umg.json
source/: log.cpp  log.h  main.cpp  randomizer.cpp  randomizer.h
source/application/: application.cpp  application.h  game_app.cpp  game_app.h  player.cpp  player.h
source/battlefield/: battlefield.cpp  battlefield.h
source/controlers/: controler.h
source/core/: component.cpp  component.h  id_gen.h  log.cpp  log.h  lua_vm.cpp  lua_vm.h  randomize.cpp  registrable.h  resource_loader.cpp  resource_manager.cpp  resource_manager.h
source/gameplay/: action.cpp  action.h  game_state.cpp  game_state.h  player.cpp  player.h  scenario.h
source/graphics/: graphics_state.cpp  graphics_state.h  map_gfx.cpp  map_gfx.h  shapes.cpp  shapes.h  token.cpp  token.h  unit_gfx.cpp  unit_gfx.h
source/gui/: console.cpp  console.h  dock_space.cpp  log_window.cpp  log_window.h  network_prompt.h
source/lua/: lua_gameplay.cpp  lua_map.cpp  lua_units.cpp  lua_units.h
source/map/: concrete_hex.cpp  concrete_hex.h  concrete_passage.cpp  concrete_passage.h  concrete_site.cpp  concrete_site.h  directions.h  graph.cpp  graph.h  hex_border_shape.cpp  hex_border_shape.h  hex_shape.cpp  hex_shape.h  hex_site.cpp  hex_site.h  hexagons.cpp  hexagons.h  lua_map.cpp  map.cpp  map.h  map_site.cpp  map_site.h  passage_site.cpp  passage_site.h  site_factory.cpp  site_factory.h  site_type.h  types.cpp  types.h
source/messaging/: concrete_message.cpp  concrete_message.h  messaging.cpp  messaging.h
source/mover/: concrete_mover.h  mover.cpp  mover.h
source/moving/: mover.cpp  mover.h
source/networking/: client.cpp  client.h  netwoking_status.h  server.cpp  server.h
source/players/: player.cpp  player.h
source/systems/: debug_info.cpp  debug_info.h  fighter.cpp  fighter.h  mover.cpp  mover.h
source/team/: team.cpp  team.h
source/unit/: heavy_unit.cpp  heavy_unit.h  lua_units.cpp  stack.cpp  stack.h  team.cpp  team.h  tokenizable.cpp  tokenizable.h  unit.cpp  unit.h  unit_components.cpp  unit_components.h  unit_manager.cpp  unit_manager.h  unit_set.cpp  unit_set.h  (+1 more)
systems/: CMakeLists.txt
systems/include/tsys/: kircholm.h  systems.h
systems/include/tsys/kircholm/: kirch_actions.h  kirch_chase.h  kirch_component_system.h  kirch_components.h  kirch_fight.h  kirch_gui.h  kirch_lua.h  kirch_mover.h  kirch_organization.h  kirch_retreat.h  kirch_system.h  kirch_types.h
systems/source/: kircholm.cpp  systems.cpp
systems/source/kircholm/: actions.cpp  chase.cpp  component_system.cpp  components.cpp  fight.cpp  gui.cpp  kircholm.cpp  lua.cpp  mover.cpp  organization.cpp  retreat.cpp  system.cpp
tests/: CMakeLists.txt  messages.cpp
tests/engine/: CMakeLists.txt
tests/engine/source/: map.cpp  units.cpp
tests/map/: CMakeLists.txt  main.cpp
tests/messages/: CMakeLists.txt  main.cpp  msg_cereal.cpp  msg_cereal.h
tests/source/: core.cpp  map.cpp  moving.cpp  units.cpp
tests/systems/: CMakeLists.txt
tests/systems/source/kircholm/: moving.cpp
(+3 files in other folders)
